# warroom

./: AGENTS.md  BOARD.md  ONBOARD_PASTE.md  README.md  RULES.md  SETUP_TELEGRAM.md  STATUS.md
listener/: warroom_listen.py  warroom_relay_worker.py
live/: now.json
maestro/: .gitignore  README.md  maestro.py  maestro_nl.py
maestro/scores/: demo.txt  nl_demo.txt
maestro/soundfonts/: README.md
relay/done/: .gitkeep  Gemma-dist-1780845836.json  Karen-shop2-1780931165.json  Mini-dist-1780845836.json  Mini-shop2-1780931165.json  Mini-shopify-1780930016.json
relay/inbox/: .gitkeep  Dali-code26-1780862514.json  Dali-pet-1780867838.json  Gemma-1780717360-8503.json  Gemma-1780718276-7900.json  Gemma-1780718908-8729.json  Gemma-1780731189-1176.json  Gemma-1780733436-1168.json  Gemma-1780767511-2261.json  Gemma-1780793355-7148.json  Gemma-1780794863-2077.json  Gemma-T032-1780876452.json  Gemma-T036quant-1781140245.json  Gemma-ping-1781077736.json  Karen-1780717126-3763.json  Karen-1780717168-6730.json  Karen-1780731184-9834.json  Karen-1780733433-4062.json  Karen-1780767505-1912.json  Karen-1780770388-1015.json  Karen-1780793353-8411.json  Karen-1780794862-3383.json  (+25 more)
tasks/: .gitkeep  T-004-phase2-autoread.md  T-006-amazon-associate-exposure.md  T-007-neon-warroom-video.md  T-008-pinterest-amazon-affiliate.md  T-009-warroom-web-frontend.md  T-030-shotpro-distribution.md
tasks/T-015/phantom-native/: CMakeLists.txt  Info.plist  README.md
tasks/T-015/phantom-native/Source/: Main.cpp  Main.cpp.bak  Main.cpp.bak2
web/: README.md  package.json  server.js  server.js.bak
(+152 files in other folders)
